--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+    <link type="image/png" sizes="16x16" rel="icon" href="/public/icons8-female-profile-pulsar-color-16.png">
+    <link type="image/png" sizes="32x32" rel="icon" href="/public/icons8-female-profile-pulsar-color-32.png">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Friendify</title>
   </head>
